# gdb_workshop

./: .clang-format  .clang-tidy  .gitignore  Dockerfile  LICENSE  README.md  Vagrantfile  build.sh  run_format.sh  run_tidy.sh
.github/workflows/: deploy.yml
00_basic_example/: hello.cpp  printer.cpp  printer.h
02_stripping_and_loading/: CMakeLists.txt  main.cpp
03_attaching/: main.cpp
04_core_dump/01_with_symbols/: main.cpp
04_core_dump/02_without_symbols/: core  main.cpp
04_core_dump/03_ai_crash_analyzer/: LLM_input
05_breakpoints/01_basic_example/: CMakeLists.txt  main.cpp
05_breakpoints/02_advanced_breakpoints/: CMakeLists.txt  lib.cpp  lib.h  main.cpp
06_watchpoints/: main.cpp
07_catchpoints/: CMakeLists.txt  main.cpp
08_display_and_call/: CMakeLists.txt  main.cpp
09_signals/: main.cpp  test_signals.py
day01/: build.sh
day01/00_basic_example/: CMakeLists.txt  build.sh  hello.cpp  printer.cpp
day01/01_breakpoints/: build.sh
day01/01_breakpoints/01_basic_example/: build.sh  main.cpp
day01/01_breakpoints/02_functions_overload/: CMakeLists.txt  build.sh  main.cpp
day01/01_breakpoints/03_commands/: CMakeLists.txt  build.sh  commands.gdb  main.cpp
day01/01_breakpoints/04_templates/: CMakeLists.txt  build.sh  main.cpp
day01/02_display_and_call/: AReallyImportantClass.cpp  AReallyImportantClass.h  CMakeLists.txt  build.sh  main.cpp
day01/02_preparing_the_executable/: CMakeLists.txt
day01/03_preparing_the_executable/: CMakeLists.txt  build.sh  main.cpp
day01/04_fission/: CMakeLists.txt  README.md  build.sh  main.cpp
day01/04_fission/Processors/: CMakeLists.txt  Processor.h  Processor1.cpp  Processor2.cpp  Processor3.cpp  Processor4.cpp
day01/04_fission/Utils/: CMakeLists.txt  Heavy.h
day01/05_advanced_breakpoints/: CMakeLists.txt  build.sh  lib.cpp  main.cpp
day01/06_watchpoints/: CMakeLists.txt  build.sh  main.cpp
day01/07_catchpoints/: build.sh  main.cpp
day01/08_plugins/: CMakeLists.txt  build.sh  main.cpp  plugin.cpp
day01/09_debuginfod/: CMakeLists.txt  build.sh  main.cpp  run_debuginfod.sh
day02/: build.sh
day02/01_core_dump/: build.sh
day02/01_core_dump/01_with_symbols/: CMakeLists.txt  build.sh  main.cpp
day02/01_core_dump/02_without_symbols/: CMakeLists.txt  build.sh  main.cpp
day02/01_core_dump/03_ai_crash_analyzer/: LLM_input  LLM_output
day02/01_core_dump/04_additional_core_dump/: CMakeLists.txt  main.cpp
day02/02_attaching/: CMakeLists.txt  README.md  build.sh  main.cpp
day02/03_altering_execution/: CMakeLists.txt  build.sh  main.cpp
day02/03_handling_signals/: CMakeLists.txt  build.sh  main.cpp
day02/04_checkpoints/: CMakeLists.txt  build.sh  main.cpp
day02/05_tracepoints/: CMakeLists.txt  build.sh  commands.gdb  dump-trace.py  main.cpp
day02/06_reverse_execution/: build.sh  main.cpp
day02/07_remote_debugging/: CMakeLists.txt  build.sh  main.cpp
day02/08_valgrind/: CMakeLists.txt  build.sh  main.c  main.cpp  multiple.supp  run_demo.sh  sup_all.supp  sup_func.supp  sup_main.supp
day02/09_vgdb/: CMakeLists.txt  build.sh  gdb_commands.txt  main.c  run_vgdb.sh
day02/10_asan/: CMakeLists.txt  build.sh  main.cpp  run_demo.sh
day02/11_inspect_heap/: CMakeLists.txt  build.sh  main.cpp
day02/12_gdbheap/: .gdbinit  CMakeLists.txt  build.sh  gdb-commands.txt  main.c
day02/13_ubsan/: CMakeLists.txt  build.sh  main.cpp  run_demo.sh
day02/14_memory_dump/: CMakeLists.txt  build.sh  main.cpp
day03/: build.sh
day03/01_multithreading/: build.sh
day03/01_multithreading/01_basic_example/: CMakeLists.txt  build.sh  main.cpp
day03/01_multithreading/02_deadlock/: CMakeLists.txt  build.sh  main.cpp
day03/01_multithreading/03_helgrind/: CMakeLists.txt  build.sh  main.cpp  run_demo.sh
day03/01_multithreading/04_tsan/: CMakeLists.txt  build.sh  main.cpp  run_demo.sh
day03/01_multithreading/05_mt_coredump/: CMakeLists.txt  build.sh  main.cpp  run_demo.sh
day03/01_multithreading/06_stop_modes/: CMakeLists.txt  build.sh  main.cpp
day03/02_gdb_customizations/01_gdbinit/: .gdb_history  .gdbinit  CMakeLists.txt  build.sh  main.cpp  run_demo.sh
day03/02_gdb_customizations/02_python/: CMakeLists.txt  build.sh  gdb_commands.py  main.cpp
day03/02_gdb_customizations/03_dashboard/: CMakeLists.txt  build.sh  main.cpp
day03/02_gdb_customizations/05_hooks/: CMakeLists.txt  hook.txt  main.c
day03/03_complementary_tools/01_procdump/: CMakeLists.txt  build.sh  main.cpp  run_demo.sh
day03/03_complementary_tools/02_bpftrace/: CMakeLists.txt  build.sh  main.cpp  run_demo.sh  run_trace.sh  trace_commands.bt
day03/03_complementary_tools/02_procmon/: run_demo.sh
day03/03_complementary_tools/03_wireshark/: client.py  protocol.py  run.sh  server.py
day03/03_complementary_tools/03_wireshark/dissector/: gd_dissector.lua
day03/04_cpp_features/01_stacktrace/: CMakeLists.txt  build.sh  main.cpp
day03/05_reverse_execution/: .gdbinit  CMakeLists.txt  main.cpp
docs/: config.toml
docs/content/: _index.md
docs/templates/: index.html
exercises/: build.sh
exercises/day01/: build.sh
exercises/day01/ex01/: README.md  build.sh  main.cpp
exercises/day01/ex02/: README.md  build.sh  main.cpp
exercises/day01/ex03/: CMakeLists.txt  README.md  build.sh  main.cpp
exercises/day01/ex04/: CMakeLists.txt  README.md  build.sh  main.cpp
exercises/day01/ex05_buckets/: CMakeLists.txt  README.md  build.sh  tests.cpp  tests_prev.cpp
exercises/day01/home/login/: CMakeLists.txt  README.md  build.sh  login.cpp
exercises/day02/: build.sh
exercises/day02/ex01/: CMakeLists.txt  README.md  build.sh  main.cpp
exercises/day02/ex02/: README.md  build.sh  main.cpp
exercises/day02/ex03/: CMakeLists.txt  README.md  build.sh
exercises/day03/ex01/: CMakeLists.txt  README.md  build.sh  finish-threads.txt  main.cpp
exercises/day03/ex02a/: CMakeLists.txt  README.md  build.sh  main.cpp
exercises/day03/ex02b/: CMakeLists.txt  README.md  build.sh  main.cpp
exercises/day03/ex02c/: CMakeLists.txt  README.md  build.sh  main.cpp
slides/cheatsheet/: gdb_cheatsheet.md  styles.css
